feat(app): add task status implementation
