# pkg/routes/board.go
@@ -26,13 +26,17 @@ func RegisterBoardRoutes(router *mux.Router, svc service.BoardService) {
 	}
 
 	router.Path("/boards").Methods(http.MethodPost).HandlerFunc(controller.createBoard)
+	router.Path("/boards/{boardID:[0-9]+}").Methods(http.MethodGet).HandlerFunc(controller.getBoard)
 	boardRouter := router.PathPrefix("/boards/{boardID:[0-9]+}").Subrouter()
 	boardRouter.Path("/archive").Methods(http.MethodGet).HandlerFunc(controller.archiveBoard(true))
 	boardRouter.Path("/unarchive").Methods(http.MethodGet).HandlerFunc(controller.archiveBoard(false))
 	boardRouter.Path("/users").Methods(http.MethodPut).HandlerFunc(controller.assignOrRemoveUser(false))
 	boardRouter.Path("/users").Methods(http.MethodDelete).HandlerFunc(controller.assignOrRemoveUser(true))
 	boardRouter.Path("/users").Queries("limit", "{[0-9]+}").Methods(http.MethodGet).HandlerFunc(controller.getUsers)
-	boardRouter.Methods(http.MethodGet).HandlerFunc(controller.getBoard)
+	boardRouter.Path("/status").Methods(http.MethodPost).HandlerFunc(controller.createStatus)
+	boardRouter.Path("/status").Queries("limit", "{[0-9]+}").Methods(http.MethodGet).HandlerFunc(controller.listStatus)
+	boardRouter.Path("/status/{statusID:[0-9]+}").Methods(http.MethodDelete).HandlerFunc(controller.deleteStatus)
+	boardRouter.Path("/status/{statusID:[0-9]+}").Methods(http.MethodGet).HandlerFunc(controller.getStatus)
 }
 
 // swagger:parameters createBoard
@@ -100,7 +104,7 @@ func (controller *boardController) createBoard(w http.ResponseWriter, r *http.Re
 	w.Write(mustJSONMarshal(resp))
 }
 
-// swagger:parameters getBoard archiveBoard unarchiveBoard assignUser removeUser listUser
+// swagger:parameters getBoard archiveBoard unarchiveBoard assignUser removeUser listUser createStatus deleteStatus getStatus listStatus
 type _ struct {
 	// in: path
 	BoardID uint `json:"boardID"`
@@ -338,17 +342,10 @@ func (controller *boardController) assignOrRemoveUser(remove bool) http.HandlerF
 	}
 }
 
-// A list of user resources with their location
-// swagger:response listUser
-type listUserResponse struct {
+// swagger:parameters listUser
+type _ struct {
 	// in: query
-	// Minimum: 1
-	// Maximum: 50
 	Limit uint `json:"limit"`
-	// in: body
-	Body struct {
-		Hrefs []string `json:"hrefs"`
-	}
 }
 
 // swagger:route GET /boards/{boardID}/users board user listUser
@@ -363,7 +360,7 @@ type listUserResponse struct {
 //	Security:
 //		- api_key
 //	Responses:
-//		200: listUser
+//		200: listResponse
 //		400: errored
 //		404: errored
 //		500: errored
@@ -404,11 +401,277 @@ func (controller *boardController) getUsers(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	resp := &listUserResponse{}
+	resp := &listResponse{}
 	for _, id := range ids {
 		resp.Body.Hrefs = append(resp.Body.Hrefs, fmt.Sprintf("/users/%d", id))
 	}
 
 	w.WriteHeader(http.StatusOK)
+	w.Write(mustJSONMarshal(resp.Body))
+}
+
+// swagger:parameters createStatus
+type createStatusParams struct {
+	// in: body
+	Body struct {
+		Title string `json:"title"`
+	}
+}
+
+// swagger:route POST /boards/{boardID}/status board status createStatus
+//
+// Create a new status for a given board
+//
+//	Consumes:
+//		- application/json
+//	Produces:
+//		- application/json
+//	Schemes: http, https
+//	Security:
+//		- api_key
+//	Responses:
+//		201: created
+//		400: errored
+//		500: errored
+func (controller *boardController) createStatus(w http.ResponseWriter, r *http.Request) {
+	claims, ok := r.Context().Value(service.SessionClaims{}).(*service.SessionClaims)
+	if !ok {
+		controller.logger.Warn().Msg("unable to get auth context")
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(ErrInternalServerError)
+		return
+	}
+
+	userID, _ := strconv.ParseUint(claims.Subject, 10, 64)
+	params := mux.Vars(r)
+	boardID, err := strconv.ParseUint(params["boardID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid board_id"))
+		return
+	}
+
+	bodyParams := &createStatusParams{}
+	err = parseRequestBody(r.Body, &bodyParams.Body)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(ErrInvalidBody)
+		return
+	}
+
+	statusID, err := controller.svc.CreateStatus(bodyParams.Body.Title, uint(boardID), uint(userID))
+	if err != nil {
+		if err == model.ErrInternalServerError {
+			w.WriteHeader(http.StatusInternalServerError)
+		} else {
+			w.WriteHeader(http.StatusBadRequest)
+		}
+		w.Write(generateErrorResponse(err.Error()))
+		return
+	}
+
+	resp := &createdResponse{}
+	resp.Body.Href = fmt.Sprintf("/boards/%d/status/%d", boardID, statusID)
+	w.WriteHeader(http.StatusCreated)
+	w.Write(mustJSONMarshal(resp.Body))
+}
+
+// swagger:parameters listStatus
+type _ struct {
+	// in: query
+	Limit uint `json:"limit"`
+}
+
+// swagger:route GET /boards/{boardID}/status board status listStatus
+//
+// List all status for a given board
+//
+//	Consumes:
+//		- application/json
+//	Produces:
+//		- application/json
+//	Schemes: http, https
+//	Security:
+//		- api_key
+//	Responses:
+//		200: listResponse
+//		400: errored
+//		500: errored
+func (controller *boardController) listStatus(w http.ResponseWriter, r *http.Request) {
+	claims, ok := r.Context().Value(service.SessionClaims{}).(*service.SessionClaims)
+	if !ok {
+		controller.logger.Warn().Msg("unable to get auth context")
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(ErrInternalServerError)
+		return
+	}
+
+	userID, _ := strconv.ParseUint(claims.Subject, 10, 64)
+	params := mux.Vars(r)
+	boardID, err := strconv.ParseUint(params["boardID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid board_id"))
+		return
+	}
+
+	limit, err := strconv.ParseUint(r.FormValue("limit"), 10, 64)
+	if err != nil || limit < 1 || limit > 50 {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid limit"))
+		return
+	}
+
+	statusIDs, err := controller.svc.ListStatus(uint(boardID), uint(userID))
+	if err != nil {
+		if err == model.ErrInternalServerError {
+			w.WriteHeader(http.StatusInternalServerError)
+		} else {
+			w.WriteHeader(http.StatusBadRequest)
+		}
+		w.Write(generateErrorResponse(err.Error()))
+		return
+	}
+
+	resp := &listResponse{}
+	for _, id := range statusIDs {
+		resp.Body.Hrefs = append(resp.Body.Hrefs, fmt.Sprintf("/boards/%d/status/%d", boardID, id))
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(mustJSONMarshal(resp.Body))
+}
+
+// swagger:parameters deleteStatus getStatus
+type _ struct {
+	// in: path
+	StatusID string `json:"statusID"`
+}
+
+// status deleted successfully
+// swagger:response deleteStatus
+type _ struct{}
+
+// swagger:route DELETE /boards/{boardID}/status/{statusID} board status deleteStatus
+//
+// Delete status for a given board
+//
+//	Consumes:
+//		- application/json
+//	Produces:
+//		- application/json
+//	Schemes: http, https
+//	Security:
+//		- api_key
+//	Responses:
+//		202: deleteStatus
+//		400: errored
+//		500: errored
+func (controller *boardController) deleteStatus(w http.ResponseWriter, r *http.Request) {
+	claims, ok := r.Context().Value(service.SessionClaims{}).(*service.SessionClaims)
+	if !ok {
+		controller.logger.Warn().Msg("unable to get auth context")
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(ErrInternalServerError)
+		return
+	}
+
+	userID, _ := strconv.ParseUint(claims.Subject, 10, 64)
+	params := mux.Vars(r)
+	boardID, err := strconv.ParseUint(params["boardID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid board_id"))
+		return
+	}
+
+	statusID, err := strconv.ParseUint(params["statusID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid status_id"))
+		return
+	}
+
+	err = controller.svc.DeleteStatus(uint(statusID), uint(boardID), uint(userID))
+	if err != nil {
+		if err == model.ErrInternalServerError {
+			w.WriteHeader(http.StatusInternalServerError)
+		} else {
+			w.WriteHeader(http.StatusBadRequest)
+		}
+		w.Write(generateErrorResponse(err.Error()))
+		return
+	}
+
+	w.WriteHeader(http.StatusAccepted)
+}
+
+// task status details
+// swagger:response getStatus
+type getStatusResponse struct {
+	// in: body
+	Body struct {
+		ID      uint   `json:"id"`
+		Title   string `json:"title"`
+		BoardID uint   `json:"board_id"`
+	}
+}
+
+// swagger:route GET /boards/{boardID}/status/{statusID} board status getStatus
+//
+// Get status details for a given board
+//
+//	Consumes:
+//		- application/json
+//	Produces:
+//		- application/json
+//	Schemes: http, https
+//	Security:
+//		- api_key
+//	Responses:
+//		200: getStatus
+//		400: errored
+//		500: errored
+func (controller *boardController) getStatus(w http.ResponseWriter, r *http.Request) {
+	claims, ok := r.Context().Value(service.SessionClaims{}).(*service.SessionClaims)
+	if !ok {
+		controller.logger.Warn().Msg("unable to get auth context")
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(ErrInternalServerError)
+		return
+	}
+
+	userID, _ := strconv.ParseUint(claims.Subject, 10, 64)
+	params := mux.Vars(r)
+	boardID, err := strconv.ParseUint(params["boardID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid board_id"))
+		return
+	}
+
+	statusID, err := strconv.ParseUint(params["statusID"], 10, 64)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(generateErrorResponse("invalid status_id"))
+		return
+	}
+
+	status, err := controller.svc.GetStatus(uint(statusID), uint(boardID), uint(userID))
+	if err != nil {
+		if err == model.ErrInternalServerError {
+			w.WriteHeader(http.StatusInternalServerError)
+		} else {
+			w.WriteHeader(http.StatusBadRequest)
+		}
+		w.Write(generateErrorResponse(err.Error()))
+		return
+	}
+
+	resp := &getStatusResponse{}
+	resp.Body.ID = status.ID
+	resp.Body.Title = status.Title
+	resp.Body.BoardID = status.BoardID
+	w.WriteHeader(http.StatusAccepted)
 	w.Write(mustJSONMarshal(resp.Body))
 }
